--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: monospace;
-    /* border:1px solid red; */
+    /* border:1px solid red;    */
 }
 
 li {
@@ -28,6 +28,7 @@ img {
 
 .card {
     width: 300px;
+    height: 525px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,10 +42,27 @@ img {
     box-shadow: 0px 0px 19px 5px rgba(107,107,107,1);   
 }
 
-.card ul {
+.fullname {
+    margin-bottom: 30px;
+}
+
+.arrow {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.unorderedList {
+    min-width: 200px;
+    height: 0;
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 5px;
-    min-width: 200px;
+    overflow: hidden;
+    transition: .4s ease-out;
+}
+
+.listIsOpen {
+    height: 25%;
 }
