--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,14 @@ li {
     list-style-type: none;
 }
 
+.users-count {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .main {
     width: 100%;
     display: grid;
