--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     font-family: monospace;
     scroll-behavior: smooth;
-    /* border: 1px solid red; */
 }
 
 li {
@@ -107,11 +106,24 @@ main {
     height: 25%;
 }
 
-.favorites {
+.aside {
     width: 30%;
+    margin-top: 100px;
+}
+
+.fav-title {
+    width: 100%;
+    height: 50px;
+    border-bottom: 1px solid gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.favorites {
+    width: 100%;
     min-height: 500px;
     max-height: 800px;
-    margin-top: 100px;
     overflow: auto;
     padding: 35px 25px 25px 25px;
 
